# polymorph

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: CI.yml
polymorpher/: all.html  enum.FeatureType.html  index.html  sidebar-items.js  struct.CornerRounding.html  struct.Cubic.html  struct.DoubleMapper.html  struct.Feature.html  struct.MeasuredPolygon.html  struct.Morph.html  struct.ProgressableFeature.html  struct.RoundedPoint.html  struct.RoundedPolygon.html  struct.RoundedPolygonBuilder.html  trait.Measurer.html
polymorpher/cubic/: index.html  sidebar-items.js  struct.Cubic.html
polymorpher/feature/: enum.FeatureType.html  index.html  sidebar-items.js  struct.Feature.html
polymorpher/feature_mapper/: fn.feature_dist_squared.html  fn.feature_representative_point.html  index.html  sidebar-items.js  struct.DistanceVertex.html  struct.MappingHelper.html
polymorpher/geometry/: constant.ANGLE_EPSILON.html  constant.DISTANCE_EPSILON.html  index.html  sidebar-items.js  trait.GeometryExt.html  trait.PointTransformer.html  type.Aabb.html  type.Angle.html  type.Matrix2.html  type.Matrix3.html  type.Point.html  type.Size.html  type.Vector.html
polymorpher/mapper/: fn.linear_map.html  fn.validate_progress.html  index.html  sidebar-items.js  struct.DoubleMapper.html
polymorpher/measured_polygon/: index.html  sidebar-items.js  struct.MeasuredCubic.html  struct.MeasuredPolygon.html  struct.ProgressableFeature.html
polymorpher/measurer/: index.html  sidebar-items.js  struct.LengthMeasurer.html  trait.Measurer.html
polymorpher/morph/: index.html  sidebar-items.js  struct.Morph.html
polymorpher/path/: fn.add_cubics.html  index.html  sidebar-items.js  trait.PathBuilder.html
polymorpher/polygon_builder/: fn.pill_star_vertices_from_num_verts.html  fn.star_vertices_from_num_verts.html  index.html  sidebar-items.js  struct.Circle.html  struct.Pill.html  struct.PillStar.html  struct.Rectangle.html  struct.RoundedPolygonBuilder.html  struct.Star.html  trait.HaveRadius.html  trait.HaveRounding.html  trait.HaveSize.html
polymorpher/rounded_polygon/: constant.DISTANCE_EPSILON.html  fn.center_from_vertices.html  fn.custom_polygon.html  fn.vertices_from_count.html  index.html  sidebar-items.js  (+4 more)
src/: cubic.rs  feature.rs  feature_mapper.rs  geometry.rs  lib.rs  mapper.rs  measured_polygon.rs  measurer.rs  morph.rs  path.rs  polygon_builder.rs  rounded_polygon.rs  shapes.rs  util.rs
tests/: cubic.rs  feature.rs  mapping.rs  morph.rs  rounded_polygon.rs
(+88 files in other folders)
