[package]
name = "polymorpher"
description = "Library for creating and morphing potentially rounded polygons"
version = "0.1.0"
edition = "2024"

[dependencies]
euclid = "0.22.11"
skia-safe = { version = "0.87.0", optional = true }
lyon_tessellation = { version = "1.0.15", optional = true }

[features]
default = []
skia = ["dep:skia-safe"]
lyon = ["dep:lyon_tessellation"]

[lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
must_use_candidate = { level = "allow", priority = 1 }
