[package]
name = "polymorpher"
description = "Library for creating and morphing potentially rounded polygons"
version = "0.1.4"
edition = "2024"
documentation = "https://docs.rs/polymorpher"
homepage = "https://github.com/Aiving/polymorpher"
repository = "https://github.com/Aiving/polymorpher.git"
readme = "README.md"
license = "Apache-2.0"
keywords = ["graphics", "2d", "shape", "polygon"]
categories = ["graphics"]
rust-version = "1.85.1"

[dependencies]
euclid = "0.22.11"
skia-safe = { version = "0.87.0", optional = true }
lyon_tessellation = { version = "1.0.15", optional = true }
kurbo = { version = "0.11.2", optional = true }
tiny-skia-path = { version = "0.11.4", optional = true }

[features]
default = []
kurbo = ["dep:kurbo"]
skia = ["dep:skia-safe"]
tiny-skia = ["dep:tiny-skia-path"]
lyon = ["dep:lyon_tessellation"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
must_use_candidate = { level = "allow", priority = 1 }

[dev-dependencies]
float-cmp = "0.10.0"
